--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -7,7 +7,7 @@
     box-sizing: border-box
 
 body
-    background-color: variables.$bg-color
+    background-color: variables.$body-bg-color
 
 a, svg
     transition: .4s        
